# gowasm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  my_logs.txt  package-lock.json  package.json  run.sh  rust-toolchain.toml  rustfmt.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: assignment_support.rs  assignments.rs  builder_support.rs  builtins.rs  call_validation.rs  calls.rs  capture_analyzer.rs  closures.rs  comparisons.rs  compile_error.rs  compile_error_context.rs  compiler_context.rs  compiler_phase.rs  concurrency.rs  const_eval.rs  const_lowering.rs  consts.rs  control_flow.rs  data.rs  defers.rs  diagnostics.rs  embedding.rs  generic_instances.rs  generic_instances_imported.rs  generic_substitute.rs  generics.rs  globals.rs  import_resolution.rs  imported_calls.rs  imported_generics.rs  int_ops.rs  interface_satisfaction.rs  lib.rs  lookup_support.rs  method_values.rs  module_graph_validation.rs  multi_calls.rs  package_artifact_schema.rs  package_const_eval.rs  package_init_order.rs  (+193 more)
crates/compiler/testdata/: package_artifact_schema_v1.json
crates/engine/: Cargo.toml
crates/engine/src/: capability_bridge.rs  compile_cache.rs  compile_diagnostics.rs  diagnostic_source.rs  formatting.rs  lib.rs  linting.rs  module_loading.rs  runtime_diagnostics.rs  snippet_runner.rs  test_result_details.rs  test_runner.rs  tests.rs  tests_app_samples_one.rs  tests_app_samples_reflect_json.rs  tests_app_samples_two.rs  tests_capabilities.rs  tests_capability_compat.rs  tests_compile_fail_diagnostics_golden.rs  tests_diagnostics.rs  tests_diagnostics_golden.rs  tests_fetch.rs  tests_fetch_more.rs  tests_fetch_response_fidelity.rs  tests_fetch_streaming.rs  tests_fetch_streaming_context.rs  tests_formatting.rs  tests_fuzz_harness.rs  tests_incremental_compile.rs  tests_incremental_compile_shapes.rs  tests_linting.rs  tests_module_protocol.rs  tests_module_resolution.rs  tests_negative_support_corpus.rs  tests_os_env.rs  (+12 more)
crates/vm/: Cargo.toml
(+610 files in other folders)
