[workspace]
members = [
    "crates/compiler",
    "crates/engine",
    "crates/engine-wasm",
    "crates/host-types",
    "crates/lexer",
    "crates/parser",
    "crates/vm",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
cap = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[profile.release]
opt-level = 1
lto = false
codegen-units = 16
incremental = true

[profile.release.package."*"]
opt-level = 3

[profile.ship]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[profile.coverage]
inherits = "dev"
opt-level = 0
debug = 1
incremental = false
